--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
               </div>
             </form>
             <ul class="nav navbar-nav navbar-right">
+              <li><a href='#'>V .04</a></li>
               <li><div id='loading'><i class="fa fa-spinner fa-2x fa-pulse" aria-hidden="true"></i></div></li>
             </ul>
           </div><!-- /.navbar-collapse -->
