--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
               <li class='dropdown'>
                 <a href='#' class='dropdown-toggle' data-toggle='dropdown' role='button'>View <span class='caret'></span></a>
                 <ul class='dropdown-menu'>
+                  <li><a href='#'><i class="fa fa-leaf" aria-hidden="true"></i> Dashboard</a></li>
                   <li><a href='#' id='groupViewClick'><i class="fa fa-users" aria-hidden="true"></i> Groups</a></li>
                   <li><a href='#' id='eventViewClick'><i class="fa fa-calendar" aria-hidden="true"></i> Calendar</a></li>
                   <li><a href='#'><i class="fa fa-table" aria-hidden="true"></i> Transactions</a></li>
@@ -142,6 +143,7 @@
                 <ul class="dropdown-menu">
                   <li class='newGroup_click'><a href='#'><i class="fa fa-user" aria-hidden="true"></i> Group</a></li>
                   <li><a href='#'><i class="fa fa-plus-square" aria-hidden="true"></i> Transaction</a></li>
+                  <li><a href='#'><i class="fa fa-plus-square" aria-hidden="true"></i> Payment</a></li>
                 </ul>
               </li>
             </ul>
@@ -599,7 +601,7 @@
                   <br />
                   <div class='row'>
                     <div class='col-md-3'>
-                      <button type='button' class='btn btn-primary'>View Group</button>
+                      <button type='button' class='btn btn-primary cal_viewGroup'>View Group</button>
                     </div>
                   </div>
                   <br />
@@ -638,11 +640,6 @@
                     </div>
                   <% } %>
                   <br />
-                  <div class='row'>
-                    <div class='col-md-3'>
-                      <button type='button' class='btn btn-primary'>View Event</button>
-                    </div>
-                  </div>
                 </div>
               </p>
             </div>
