--- a/views.html
+++ b/views.html
@@ -397,6 +397,8 @@ app.CalendarViewInfo = Backbone.View.extend({
 	
 });
 
+// Transaction view
+
 // Primary view
 app.AppView = Backbone.View.extend({
 	
