--- a/models.html
+++ b/models.html
@@ -105,4 +105,50 @@ app.Event = Backbone.Model.extend({
   
 });
 
+// Transaction Model
+app.TransactionModel = Backbone.Model.extend({
+  
+  defaults: {
+    id: '', // int
+    amount: '', // int
+    datePosted: '', // moment raw
+    notes: '', // string
+    paid: '', // bool
+    datePaid: '', //moment raw
+    eventID: '', // int if from event, null if not
+    groupID: '' // int if from group, null if not
+  },
+  setDates: function() { // set actual date objects
+    if (this.datePosted !== '' && this.datePosted !== null) {
+      this.set({datePosted: moment(this.datePosted)});
+    }
+    if (this.datePaid !== '' && this.datePaid !== null) {
+      this.set({datePaid: moment(this.datePaid)});
+    }
+  }
+  
+});
+
+// Payment Model
+app.PaymentModel = Backbone.Model.extend({
+  
+  defaults: {
+    id: '', // int
+    transactionID: '', // int
+    amount: '', // int
+    paymentType: '', // string [from options] | need config model?
+    datePaid: '', // moment raw
+    datePosted: '' //moment raw
+  },
+  setDates: function() {
+    if (this.datePosted !== '' && this.datePosted !== null) {
+      this.set({datePosted: moment(this.datePosted)});
+    }
+    if (this.datePaid !== '' && this.datePaid !== null) {
+      this.set({datePaid: moment(this.datePaid)});
+    }
+  }
+  
+});
+
 </script>
