--- a/collections.html
+++ b/collections.html
@@ -74,6 +74,20 @@ app.TransactionList = Backbone.Collection.extend({
   },
   comparator: function(transaction) { // sort ascending by date posted
     return new Date(transaction.attributes.datePosted) * -1;
+  },
+  getNextID: function() {
+
+    var id = 0;
+    for (var i = 0; i < this.models.length; i++) {
+
+      if (parseInt(this.models[i].attributes.id) > id) {
+        id = this.models[i].attributes.id;
+      }
+
+    }
+    ++id;
+    return id;
+
   }
   
 });
