--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
           </div>
           <div class='row'>
             <div class='col-md-9'>
-              <button type='button' class='btn btn-primary groupEventEdit'><i class="fa fa-pencil" aria-hidden="true"></i> Edit</button> <button type='button' class='btn btn-success eventInvoice'><i class="fa fa-file-text-o" aria-hidden="true"></i> Invoice</button> <button type='button' class='btn btn-info groupEventTransaction'><i class="fa fa-money" aria-hidden="true"></i> View Transaction</button> <button type='button' class='btn btn-danger eventDelete'><i class="fa fa-trash-o" aria-hidden="true"></i> Delete Event</button>
+              <button type='button' class='btn btn-primary groupEventEdit'><i class="fa fa-pencil" aria-hidden="true"></i> Edit</button> <button type='button' class='btn btn-success eventInvoice'><i class="fa fa-file-text-o" aria-hidden="true"></i> Invoice</button> <button type='button' class='btn btn-info viewTransaction_click'><i class="fa fa-money" aria-hidden="true"></i> View Transaction</button> <button type='button' class='btn btn-danger eventDelete'><i class="fa fa-trash-o" aria-hidden="true"></i> Delete Event</button>
             </div>
           </div>
         </div>
