--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
             </ul>
             <form class="navbar-form navbar-left">
               <div class="form-group">
-                <input type="text" class="form-control" id='searchVal' placeholder="Search">
+                <div class='input-group'>
+                  <span class='input-group-addon'>Group Search</span>
+                  <input type='text' class='form-control cellPhone' id='searchVal' />
+                </div>
               </div>
             </form>
             <ul class="nav navbar-nav navbar-right">
