--- a/models.html
+++ b/models.html
@@ -8,6 +8,7 @@ app.Group = Backbone.Model.extend({
   defaults: {
     id: '',
     groupName: '',
+    groupGroup: '',
     groupType: '',
     cellPhone: '',
     workPhone: '',
